<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:src="@drawable/logo"
        android:text="2" />

 <LinearLayout
     android:id="@+id/address_info"
     android:orientation="vertical"
     android:padding="16sp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/logo"
     android:layout_centerHorizontal="true"
     android:layout_margin="24dp">

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:layout_weight="0"
         android:text="@string/dyi_arts_and_crafts_store"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/_14129_memorial_drive_ste_g"
        android:textAlignment="center"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/_281_616_5865"
        android:textAlignment="center"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/memorial_info_therusticbrush_com"
        android:textAlignment="center"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/www_therusticbrush_com"
        android:textAlignment="center"
        android:layout_margin="4dp"/>

</LinearLayout>
</RelativeLayout>

